--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <footer class="footer">
 
         <div class="social">
-            <a href="https://www.facebook.com/noam1999/"><i class='bx bxl-facebook-circle'></i></a>
+            <!-- <a href="https://www.facebook.com/noam1999/"><i class='bx bxl-facebook-circle'></i></a> -->
             <a href="https://www.youtube.com/@Noamrr17"><i class='bx bxl-youtube'></i></a>
             <a href="https://www.instagram.com/noamrr17/"><i class='bx bxl-instagram-alt'></i></i></a>
             <a href="https://www.linkedin.com/in/noam-rahamim-472877289/"><i class='bx bxl-linkedin'></i></a>
